--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ version = '1.0-SNAPSHOT'
 ext {
     junitVersion = '5.11.0'
     assertjVersion = '3.26.3'
+    lombokVersion = '1.18.36'
 }
 
 java {
@@ -25,6 +26,9 @@ application {
 
 repositories {
     mavenCentral()
+    maven {
+        url = 'https://projectlombok.org/edge-releases'
+    }
 }
 
 dependencies {
@@ -36,6 +40,9 @@ dependencies {
 
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'ch.qos.logback:logback-classic:1.5.24'
+
+    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
+    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
 }
 
 checkstyle {
