feat: Руализовать HTTP server

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ java {
 }
 
 application {
-    mainClass = 'ru.mentee.power.ApplicationLead'
+    mainClass = 'ru.mentee.power.crm.ApplicationLead'
 }
 
 repositories {
