--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'jacoco'
     id 'checkstyle'
+    id 'gg.jte.gradle' version '3.1.15'
 }
 
 group = 'ru.mentee.power'
@@ -14,6 +15,7 @@ ext {
     lombokVersion = '1.18.36'
     servletVersion = '6.1.0'
     tomcatVersion = '11.0.1'
+    jteVersion = '3.1.15'
 }
 
 java {
@@ -51,6 +53,15 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
     annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
+
+    implementation "gg.jte:jte:${jteVersion}"
+    implementation "gg.jte:jte-runtime:${jteVersion}"
+}
+
+jte {
+    sourceDirectory = file("src/main/jte").toPath()
+    contentType = "Html"
+    binaryStaticContent = false
 }
 
 checkstyle {
