--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,16 @@
 server:
   port: 8081
-  servlet:
-    context-path: /
+
+gg:
+  jte:
+    templateLocation: src/main/resources/jte
+    developmentMode: true
 
 spring:
   application:
     name: mentee-power-crm
+
+logging:
+  level:
+    org.springframework.web: DEBUG
+    gg.jte: DEBUG
