--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ gg:
   jte:
     templateLocation: src/main/resources/jte
     developmentMode: true
+    use-compiled-classes: false
 
 spring:
   application:
